# HW_WEB6

./: Create_data_base_SQLine_hw_web6.sql  README.md  change_to_table.py  create_table.py  db_connection.py  db_lite_connection.py  example.db  get_from_table.py  hw_web6.db  insert_to_table.py  main.py  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds.py  select_to_table.py  update_table.py
tests/: sql_test.py
